--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,17 @@
 .App-link {
   color: #61dafb;
 }
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
 @keyframes App-logo-spin {
   from {
